Fix for header covering edit pencil in alpha
Moves #page-actions inside .pre-content
In tablet css, #page-actions was scoped inside .pre-content
which is strange since page-actions was not a child of pre-content
until now. Since it was overqualified, was causing override problems.
Moved it out to be consistent with the rest of the #page-action styles.
Additionally, since page-actions is no longer above pre-content in the dom,
some padding adjustments were needed on different screen sizes.

Bug: T78707

--- a/less/pageactions.alpha.less
+++ b/less/pageactions.alpha.less
@@ -28,9 +28,7 @@
 	#page-actions {
 		// FIXME: Make default when mw-ui-icon in stable
 		font-size: 1.2em;
-
 		float: right;
-		padding-top: @titleSectionSpacingTop;
 		width: 3.4em;
 		border-bottom: none;
 		overflow: hidden;
@@ -45,14 +43,19 @@
 	}
 }
 
+@media all and (max-width: @wgMFDeviceWidthTablet) {
+	.alpha {
+		#page-actions {
+			padding-top: 0;
+		}
+	}
+}
+
 @media all and (min-width: @wgMFDeviceWidthTablet) {
 	.alpha {
-		.pre-content {
-			padding: 0 @contentMargin;
-		}
-
 		#page-actions {
 			width: auto;
+			padding-right: 0;
 
 			li:first-child {
 				margin-top: 0;
